package dev.kaldiroglu.dp.creational.ch02.factoryMethod.report;

public class DailyEarningsReport extends Report{

    public DailyEarningsReport(String name) {
        super(name);
    }

    @Override
    public void open() {

    }

    @Override
    public void print() {

    }

    @Override
    public void save() {

    }

    @Override
    public void revert() {

    }

    @Override
    public void close() {

    }
}
