@startuml
skinparam linetype ortho

interface ReportFactory {
~ Report generateReport()
}

abstract class Report {
- String name
+ {abstract}void open()
+ {abstract}void print()
+ {abstract}void save()
+ {abstract}void revert()
+ {abstract}void close()
}



class DailySalesReportFactory {
+ Report generateReport()
}

class DailyEarningsReportFactory {
+ Report generateReport()
}

class DailySalesReport {
+ void open()
+ void print()
+ void save()
+ void revert()
+ void close()
}


class DailyEarningsReport {
+ void open()
+ void print()
+ void save()
+ void revert()
+ void close()
}


ReportFactory <|.. DailySalesReportFactory
ReportFactory <|.. DailyEarningsReportFactory

DailySalesReport -up-|> Report
DailyEarningsReport -up-|> Report
ReportFactory --> Report
DailySalesReportFactory --> DailySalesReport
DailyEarningsReportFactory --> DailyEarningsReport
@enduml